..k8s-config/hrm-worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-attendance-worker
  namespace: dev-is
  labels:
    app: hrm-attendance-worker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hrm-attendance-worker
  template:
    metadata:
      labels:
        app: hrm-attendance-worker
    spec:
      imagePullSecrets:
        - name: ghcr-hrm-secret
      containers:
        - name: hrm-attendance-worker
          image: ghcr.io/neotp/hr-project-worker:28.09.2026-v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "768Mi"
