..k8s-config/hrm-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-api
  namespace: dev-is
  labels:
    app: hrm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrm-api
  template:
    metadata:
      labels:
        app: hrm-api
    spec:
      imagePullSecrets:
        - name: ghcr-hrm-secret
      containers:
        - name: hrm-api
          image: ghcr.io/neotp/hr-project-backend:28.09.2026-v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/health/database
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hrm-api
  namespace: dev-is
  labels:
    app: hrm-api
spec:
  type: ClusterIP
  selector:
    app: hrm-api
  ports:
    - name: http
      port: 5002
      targetPort: 8080  # container port
      protocol: TCP
