..k8s-config/hrm-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-web
  namespace: dev-is
  labels:
    app: hrm-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrm-web
  template:
    metadata:
      labels:
        app: hrm-web
    spec:
      imagePullSecrets:
        - name: ghcr-hrm-secret
      containers:
        - name: hrm-web
          image: ghcr.io/neotp/hr-project-frontend:28.09.2026-v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 12
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: hrm-web
  namespace: dev-is
  labels:
    app: hrm-web
spec:
  type: ClusterIP
  selector:
    app: hrm-web
  ports:
    - name: http
      port: 8080
      targetPort: http
