..k8s-config/hrm-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrm-api
  namespace: dev-is
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    # - host: webapp.sisthai.com
      -http:
        paths:
          - path: /Hrmsystem-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hrm-api
                port:
                  number: 5002
