..k8s-config/hrm-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrm-web
  namespace: dev-is
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    # - host: webapp.sisthai.com
      -http:
        paths:
          - path: /Hrmsystem-web
            pathType: Prefix
            backend:
              service:
                name: hrm-web
                port:
                  number: 8080
